'添加表单验证'

--- a/components/form/form.wxml
+++ b/components/form/form.wxml
@@ -1,8 +1,8 @@
 <!--components/form/form.wxml-->
 <view class='component'>
-  <form>
+  <form bindsubmit="formSubmit">
     <view class="page__bd">
-      <view class="weui-toptips weui-toptips_warn" wx:if="{{showTopTips}}">错误提示</view>
+      <view class="weui-toptips weui-toptips_warn" wx:if="{{showTopTips}}">{{showTopTitle}}</view>
 
       <view class="weui-cells__title">信息请填写完整</view>
       <view class="weui-cells weui-cells_after-title">
@@ -22,8 +22,8 @@
           <view class="weui-cell__bd">
             <view class="weui-cell weui-cell_select">
               <view class="weui-cell__bd">
-                <picker bindchange="bindAccountChange" value="{{accountIndex}}" range="{{gender}}">
-                  <view class="weui-select">{{gender[0]}}</view>
+                <picker name="gender" bindchange="genderChange" value="{{genderIndex}}" range="{{gender}}">
+                  <view class="weui-select">{{gender[genderIndex]}}</view>
                 </picker>
               </view>
             </view>
@@ -37,8 +37,8 @@
           <view class="weui-cell__bd">
             <view class="weui-cell weui-cell_select">
               <view class="weui-cell__bd">
-                <picker bindchange="bindAccountChange" value="{{accountIndex}}" range="{{nation}}">
-                  <view class="weui-select">{{nation[0]}}</view>
+                <picker name='nation' bindchange="nationChange" value="{{nationIndex}}" range="{{nation}}">
+                  <view class="weui-select">{{nation[nationIndex]}}</view>
                 </picker>
               </view>
             </view>
@@ -59,7 +59,7 @@
             <view class="weui-label">身份证号</view>
           </view>
           <view class="weui-cell__bd">
-            <input name="telephone" class="weui-input" placeholder="请输入身份证号" />
+            <input name="idcard" class="weui-input" placeholder="请输入身份证号" />
           </view>
         </view>
 
@@ -70,8 +70,8 @@
           <view class="weui-cell__bd">
             <view class="weui-cell weui-cell_select">
               <view class="weui-cell__bd">
-                <picker bindchange="bindAccountChange" value="{{accountIndex}}" range="{{groupNum}}">
-                  <view class="weui-select">{{groupNum[0]}}</view>
+                <picker name="groupNum" bindchange="groupNumChange" value="{{groupNumIndex}}" range="{{groupNum}}">
+                  <view class="weui-select">{{groupNum[groupNumIndex]}}</view>
                 </picker>
               </view>
             </view>
@@ -85,9 +85,9 @@
           <view class="weui-cell__bd">
             <input name="household_num" class="weui-input" placeholder="请输入户口号" />
           </view>
-          <view class="weui-cell__ft">
+          <!-- <view class="weui-cell__ft">
             <icon type="warn" size="23" color="#E64340"></icon>
-          </view>
+          </view> -->
         </view>
 
       </view>
@@ -96,8 +96,8 @@
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell">
           <view class="weui-cell__bd">
-            <textarea name="address" class="weui-textarea" placeholder="请输入详细地址" style="height: 3.3em" />
-            <view class="weui-textarea-counter">0/200</view>
+            <textarea name="address" bindinput='addrChange' class="weui-textarea" maxlength="100" placeholder="请输入详细地址" style="height: 3.3em" />
+            <view class="weui-textarea-counter">{{addrLength}}/100</view>
           </view>
         </view>
       </view>
@@ -107,13 +107,13 @@
         <view class="weui-cell weui-cell_switch">
           <view class="weui-cell__bd">是否替他人上报</view>
           <view class="weui-cell__ft">
-            <switch checked />
+            <switch name="is_helper" checked="{{is_helper}}" />
           </view>
         </view>
       </view>
 
       <view class="weui-btn-area">
-        <button class="weui-btn" type="primary" bindtap="showTopTips">确定</button>
+        <button form-type='submit' class="weui-btn" type="primary" bindtap="showTopTips">确定</button>
       </view>
     </view>
   </form>
