--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -13,20 +13,20 @@
   </view>
 
   <view class='center'>
-    <view class="weui-loadmore weui-loadmore_line">
+    <view wx:if="{{infoList.length != 0?true:false}}" class="weui-loadmore weui-loadmore_line">
       <view class="weui-loadmore__tips weui-loadmore__tips_in-line">已经录入的人员</view>
     </view>
 
     <view class="page__bd">
       <!-- <view class="weui-cells__title">点击可编辑 左滑可删除</view> -->
       <view class="weui-cells weui-cells_after-title">
-      <listdel productList="{{infoList}}">
-        
-      </listdel>
+        <listdel productList="{{infoList}}">
+
+        </listdel>
       </view>
     </view>
 
-    <view wx:if="{{false}}" class="weui-loadmore weui-loadmore_line">
+    <view wx:if="{{infoList.length == 0?true:false}}" class="weui-loadmore weui-loadmore_line">
       <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无人员录入</view>
     </view>
   </view>
