--- a/pages/edit/edit.wxml
+++ b/pages/edit/edit.wxml
@@ -49,7 +49,7 @@
             <view class="weui-label">手机号</view>
           </view>
           <view class="weui-cell__bd">
-            <input name="telephone" class="weui-input" value='{{pageVlaues.phoneNum   }}' placeholder="请输入手机号" />
+            <input type='number' name="telephone" class="weui-input" value='{{pageVlaues.phoneNum   }}' placeholder="请输入手机号" />
           </view>
         </view>
 
@@ -58,7 +58,7 @@
             <view class="weui-label">身份证号</view>
           </view>
           <view class="weui-cell__bd">
-            <input name="idcard" class="weui-input" value='{{pageVlaues.idcard}}' placeholder="请输入身份证号" />
+            <input type='idcard' name="idcard" class="weui-input" value='{{pageVlaues.idcard}}' placeholder="请输入身份证号" />
           </view>
         </view>
 
@@ -76,19 +76,18 @@
             </view>
           </view>
         </view>
-      
+
         <view class="weui-cell weui-cell_input">
           <view class="weui-cell__hd">
             <view class="weui-label">户口号</view>
           </view>
           <view class="weui-cell__bd">
-            <input name="household_num" class="weui-input" value='{{pageVlaues.household_num}}' placeholder="请输入户口号" />
+            <input type='number' name="household_num" class="weui-input" value='{{pageVlaues.household_num}}' placeholder="请输入户口号" />
           </view>
           <!-- <view class="weui-cell__ft">
             <icon type="warn" size="23" color="#E64340"></icon>
           </view> -->
         </view>
-
       </view>
 
       <view class="weui-cells__title">住址</view>
@@ -120,7 +119,7 @@
       </view>
 
       <view class="weui-btn-area">
-        <button form-type='submit' class="weui-btn" type="primary" bindtap="showTopTips">确定</button>
+        <button form-type='submit' class="weui-btn" type="primary" disabled="{{btnLoad.show}}">{{btnLoad.title}}</button>
       </view>
     </view>
   </form>
